# CXXTemplate

./: CMakeLists.txt  Doxyfile.in  README.md  build.sh  upgradeToLatestTemplate.sh
.github/workflows/: build.yml
cmake/: Defaults.cmake  Options.cmake  Tools.cmake
cmake/macros/: CXXTools.cmake  Private.cmake  Public.cmake
cmake/tools/: CXXTools.cmake
exampleLibrary/: CMakeLists.txt
exampleLibrary/tests/: CMakeLists.txt
exampleProgram/: CMakeLists.txt  main.cpp
exampleSharedLibrary/: CMakeLists.txt
exampleSharedLibrary/tests/: testAdd.cpp
exampleStaticLibrary/: CMakeLists.txt  add.h
examples/: CMakeLists.txt
src/: CMakeTemplate.md
src/exampleModuleLibrary/: CMakeLists.txt  add.cpp  add.h  api.h
src/exampleSharedLibrary/: add.h
src/exampleStaticLibrary/: CMakeLists.txt
src/exampleStaticLibrary/tests/: testAdd.cpp
